@@ -214,7 +214,7 @@
                 <executions>
                     <execution>
                         <id>ktlint</id>
-                        <phase>verify</phase>
+                        <phase>validate</phase>
                         <configuration>
                             <target name="ktlint">
                                 <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
@@ -248,6 +248,21 @@
                         <goals>
                             <goal>run</goal>
                         </goals>
+                    </execution>
+                    <execution>
+                        <id>ktlint-lint</id>
+                        <configuration>
+                            <target name="ktlint">
+                                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
+                                      classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
+                                    <!-- Note: the JVM args below is only required when running ktlint with Java 16+ in format mode -->
+                                    <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+                                    <!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
+                                    <arg value="--reporter=checkstyle?group_by_file"/>
+                                    <arg value="src/**/*.kt"/>
+                                </java>
+                            </target>
+                        </configuration>
                     </execution>
                 </executions>
                 <dependencies>
